feat: initial installation and configuration of Flask
Configured SQLAlchemy models, authentication and routing

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-node_modules
+.idea/
+.vscode/
 
-public/uploads
+__pycache__/
 
-.DS_Store
-
-Model Training Kanji.ipynb
-
-kkanji_filtered
-
-debug_original.png
-
-debug_processed.png
+.venv/
+.env
+database.sqlite
