--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.1.2
 Flask-Login==0.6.3
 Flask-WTF==1.2.2
 WTForms==3.2.1
+flask-cors==6.0.1
 gunicorn==23.0.0
 Jinja2==3.1.6
 keras==3.12.0
