--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ pydantic==2.12.4
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 SQLAlchemy==2.0.44
-tensorflow==2.20.0
 Werkzeug==3.1.3
+gTTS==2.5.4
